Revert "fix navbar overflow"
This reverts commit 75eedc88c532b56ed172941b50edfc273fa83192.

--- a/frontend/css/inc/custom-layout.sass
+++ b/frontend/css/inc/custom-layout.sass
@@ -55,7 +55,6 @@ a.has-icon
             color: $kars-navbar-item-hover-color
 
     .kars-navbar-leading
-        overflow-x: auto
         scrollbar-width: none
         &::-webkit-scrollbar
             width: 0
